--- a/src/main/resources/templates/user/member.html
+++ b/src/main/resources/templates/user/member.html
@@ -10,7 +10,7 @@
 
 		<div class="table-responsive">
 			<table class="table table-hover">
-				<caption>Optional table caption.</caption>
+<!-- 				<caption>Optional table caption.</caption> -->
 				<thead>
 					<tr>
 						<th>UserId</th>
