--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -6,39 +6,17 @@
 	{{> /include/navigation }}
 	<div class="container">
 		<h1>Login</h1>
-
-		<div class="table-responsive">
-			<form class="form-horizontal">
-				<div class="form-group">
-					<label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-					<div class="col-sm-10">
-						<input type="email" class="form-control" id="inputEmail3"
-							placeholder="Email">
-					</div>
-				</div>
-				<div class="form-group">
-					<label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-					<div class="col-sm-10">
-						<input type="password" class="form-control" id="inputPassword3"
-							placeholder="Password">
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<div class="checkbox">
-							<label> <input type="checkbox"> Remember me
-							</label>
-						</div>
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-default">Sign in</button>
-					</div>
-				</div>
-			</form>
-		</div>
-
+		<form action="/user/login" method="POST">
+			<div class="form-group">
+				<label for="userId">UserId</label> <input type="text"
+					class="form-control" name="userId" placeholder="UserId">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label> <input type="password"
+					class="form-control" name="password" placeholder="Password">
+			</div>
+			<button type="submit" class="btn btn-primary">Login</button>
+		</form>
 	</div>
 </body>
 </html>
