--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -24,7 +24,7 @@
 				<label for="email">E-Mail</label> <input type="text"
 					class="form-control" name="email" placeholder="E-Mail">
 			</div>
-			<button type="submit" class="btn btn-default">Register</button>
+			<button type="submit" class="btn btn-primary">Register</button>
 		</form>
 	</div>
 </body>
