--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,214 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-{{> /include/header }}
+<head>{{> /include/header }}
 </head>
 <body>
 	{{> /include/navigation }}
 	<div class="container">
-		<h1>MAIN</h1>
+		<!-- 		<h1>MAIN</h1> -->
+		<div class="row">
+			<div class="col-xs-12 col-sm-6 col-md-8">
+				<h2>News</h2>
+				<p>You can see hot news</p>
+				<br>
+				<blockquote>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Integer posuere erat a ante.</p>
+					<footer>
+						Someone famous in <cite title="Source Title">Source Title</cite>
+					</footer>
+				</blockquote>
+				<blockquote>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Integer posuere erat a ante.</p>
+					<footer>
+						Someone famous in <cite title="Source Title">Source Title</cite>
+					</footer>
+				</blockquote>
+				<blockquote>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+						Integer posuere erat a ante.</p>
+					<footer>
+						Someone famous in <cite title="Source Title">Source Title</cite>
+					</footer>
+				</blockquote>
+			</div>
+			<div class="col-xs-6 col-md-4">
+				<h2>Member</h2>
+				<p>You can see Member</p>
+				<br>
+				<!-- Left-aligned media object -->
+				<div class="media">
+					<div class="media-left">
+						<img src="https://source.unsplash.com/1600x900/?animals" class="media-object"
+							style="width: 60px">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Left-aligned</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna
+							aliqua.</p>
+					</div>
+				</div>
+				<!-- Left-aligned media object -->
+				<div class="media">
+					<div class="media-left">
+						<img src="/images/img_avatar2.png" class="media-object"
+							style="width: 60px">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Left-aligned</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna
+							aliqua.</p>
+					</div>
+				</div>
+				<!-- Left-aligned media object -->
+				<div class="media">
+					<div class="media-left">
+						<img src="/images/img_avatar3.png" class="media-object"
+							style="width: 60px">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">Left-aligned</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna
+							aliqua.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-6 col-sm-4">
+<!-- 				<div class="container"> -->
+					<h2>Nature</h2>
+					<p>The .img-circle class shapes the image to a circle (not
+						available in IE8):</p>
+					<img src="https://source.unsplash.com/1600x900/?nature" class="img-circle" alt="Cinque Terre"
+						width="304" height="236">
+					<h2>Animals</h2>
+					<p>The .img-circle class shapes the image to a circle (not
+						available in IE8):</p>
+					<img src="https://source.unsplash.com/1600x900/?animals" class="img-circle" alt="Cinque Terre"
+						width="304" height="236">
+					<h2>Chicago</h2>
+					<p>The .img-circle class shapes the image to a circle (not
+						available in IE8):</p>
+					<img src="https://source.unsplash.com/1600x900/?chicago" class="img-circle" alt="Cinque Terre"
+						width="304" height="236">
+<!-- 				</div> -->
+			</div>
+			<div class="col-xs-6 col-sm-4">
+				<!-- 				<div class="container"> -->
+					<h2>Seoul</h2>
+					<p>The .img-circle class shapes the image to a circle (not
+						available in IE8):</p>
+					<img src="https://source.unsplash.com/1600x900/?seoul" class="img-rounded" alt="Cinque Terre"
+						width="304" height="236">
+					<h2>Cebu</h2>
+					<p>The .img-circle class shapes the image to a circle (not
+						available in IE8):</p>
+					<img src="https://source.unsplash.com/1600x900/?cebu" class="img-rounded" alt="Cinque Terre"
+						width="304" height="236">
+					<h2>Boracay</h2>
+					<p>The .img-circle class shapes the image to a circle (not
+						available in IE8):</p>
+					<img src="https://source.unsplash.com/1600x900/?boracay" class="img-rounded" alt="Cinque Terre"
+						width="304" height="236">
+				<!-- 				</div> -->
+
+
+			</div>
+			<div class="clearfix visible-xs-block"></div>
+			<div class="col-xs-6 col-sm-4">
+				<h2>Recently wrote</h2>
+				<p>You can see your frinds :)</p>
+				<br>
+				<div class="media">
+					<div class="media-left">
+						<img src="/images/img_avatar1.png" class="media-object"
+							style="width: 45px">
+					</div>
+					<div class="media-body">
+						<h4 class="media-heading">
+							John Doe <small><i>Posted on February 19, 2016</i></small>
+						</h4>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+							sed do eiusmod tempor incididunt ut labore et dolore magna
+							aliqua.</p>
+
+						<!-- Nested media object -->
+						<div class="media">
+							<div class="media-left">
+								<img src="/images/img_avatar2.png" class="media-object"
+									style="width: 45px">
+							</div>
+							<div class="media-body">
+								<h4 class="media-heading">
+									John Doe <small><i>Posted on February 20, 2016</i></small>
+								</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+									sed do eiusmod tempor incididunt ut labore et dolore magna
+									aliqua.</p>
+
+								<!-- Nested media object -->
+								<div class="media">
+									<div class="media-left">
+										<img src="/images/img_avatar3.png" class="media-object"
+											style="width: 45px">
+									</div>
+									<div class="media-body">
+										<h4 class="media-heading">
+											John Doe <small><i>Posted on February 21, 2016</i></small>
+										</h4>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing
+											elit, sed do eiusmod tempor incididunt ut labore et dolore
+											magna aliqua.</p>
+									</div>
+								</div>
+
+							</div>
+
+							<!-- Nested media object -->
+							<div class="media">
+								<div class="media-left">
+									<img src="/images/img_avatar4.png" class="media-object"
+										style="width: 45px">
+								</div>
+								<div class="media-body">
+									<h4 class="media-heading">
+										Jane Doe <small><i>Posted on February 20, 2016</i></small>
+									</h4>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+										sed do eiusmod tempor incididunt ut labore et dolore magna
+										aliqua.</p>
+								</div>
+							</div>
+
+						</div>
+					</div>
+
+					<!-- Nested media object -->
+					<div class="media">
+						<div class="media-left">
+							<img src="/images/img_avatar5.png" class="media-object"
+								style="width: 45px">
+						</div>
+						<div class="media-body">
+							<h4 class="media-heading">
+								Jane Doe <small><i>Posted on February 19, 2016</i></small>
+							</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+								sed do eiusmod tempor incididunt ut labore et dolore magna
+								aliqua.</p>
+						</div>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+
 	</div>
 </body>
 </html>
