--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -21,7 +21,7 @@
 				<label for="password">Password</label> <input type="password"
 					class="form-control" name="password" placeholder="Password">
 			</div>
-			<button type="submit" class="btn btn-primary">Login</button>
+			<button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
 		</form>
 	</div>
 </body>
