--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -7,6 +7,29 @@
 	{{> /include/navigation }}
 	<div class="container">
 		<h1>Register</h1>
+		{{#formData}}
+		<span class="label label-danger">UserId already exists! input other userid!</span>&nbsp;&nbsp;
+		<form action="/user/register" method="POST">
+			<div class="form-group">
+				<label for="userId">UserId</label> <input type="text"
+					class="form-control" name="userId" placeholder="UserId" value="{{userId}}">
+			</div>
+			<div class="form-group">
+				<label for="password">Password</label> <input type="password"
+					class="form-control" name="password" placeholder="Password" value="{{password}}">
+			</div>
+			<div class="form-group">
+				<label for="name">Name</label> <input type="text" class="form-control"
+					name="name" placeholder="Name" value="{{name}}">
+			</div>
+			<div class="form-group">
+				<label for="email">E-Mail</label> <input type="text"
+					class="form-control" name="email" placeholder="E-Mail" value="{{email}}">
+			</div>
+			<button type="submit" class="btn btn-primary">Register</button>
+		</form>
+		{{/formData}}
+		{{^formData}}
 		<form action="/user/register" method="POST">
 			<div class="form-group">
 				<label for="userId">UserId</label> <input type="text"
@@ -18,14 +41,15 @@
 			</div>
 			<div class="form-group">
 				<label for="name">Name</label> <input type="text" class="form-control"
-					name="name" placeholder="Name">
+					name="name" placeholder="Name" >
 			</div>
 			<div class="form-group">
 				<label for="email">E-Mail</label> <input type="text"
-					class="form-control" name="email" placeholder="E-Mail">
+					class="form-control" name="email" placeholder="E-Mail" >
 			</div>
-			<button type="submit" class="btn btn-primary">Register</button>
+			<button type="submit" class="btn btn-primary btn-lg btn-block">Register</button>
 		</form>
+		{{/formData}}
 	</div>
 </body>
 </html>
