--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -17,6 +17,7 @@
 		<div class="collapse navbar-collapse"
 			id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
+			<li><a href="/board/list">Board</a></li>
 			{{^sessionUser}}
 				<li><a href="/user/login">Login</a></li>
 				<li><a href="/user/register">Register</a></li>
