--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -5,7 +5,7 @@
 	{{> /include/navigation }} 
 	{{#boardDetail}}
 	<div class="container">
-		<h1>Board Detail</h1>
+<!-- 		<h1>Board Detail</h1> -->
 				<blockquote>
 					<p>{{title}}</p>
 					<footer>
@@ -60,12 +60,18 @@
 
 	</div>
 	<div class="container">
-		<h1>BOARD</h1>
+<!-- 		<h1>BOARD</h1> -->
 
 		<div class="table-responsive">
-
-			<a class="btn btn-primary" href="/board/createForm"
-				role="button">Write</a>
+			<div id="rowNumOfPage">
+					<nav aria-label="Page navigation">
+					  <ul class="pagination">
+						{{#rowNumOfPageList}}
+					    <li {{{active}}}><a href="/board/list?selPageSize={{rowNumOfPage}}">{{rowNumText}}</a></li>
+						{{/rowNumOfPageList}}
+					  </ul>
+					</nav>
+			</div>
 			<table class="table table-hover">
 				<!-- 				<caption>Optional table caption.</caption> -->
 				<thead>
@@ -88,6 +94,18 @@
 					{{/boardList}}
 				</tbody>
 			</table>
+			<a class="btn btn-primary" href="/board/createForm"
+				role="button">Write</a>
+			<center>
+			<nav aria-label="Page navigation">
+			  <ul class="pagination pagination-lg">
+				{{#pageInfoList}}
+			    <li {{{active}}}><a href="/board/list?selPageNo={{selPageNo}}&selPageSize={{pageSize}}">{{{pageText}}}</a></li>
+				{{/pageInfoList}}
+			    </li>
+			  </ul>
+			</nav>
+			</center>
 		</div>
 
 	</div>
