--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 		<!-- 		<h1>MAIN</h1> -->
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6">
-				<h2>Recently Boards (1)</h2>
+				<h2>Recently</h2>
 				<br>
 				{{#boardList}}
 					<div class="list-group">
@@ -29,7 +29,7 @@
 				{{/boardList}}
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6">
-				<h2>Oldest Boards (2)</h2>
+				<h2>Oldest</h2>
 				<br>
 				{{#boardList2}}
 					<div class="list-group">
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-4">
+			<div class="col-xs-12 col-sm-12 col-md-6">
 <!-- 				<div class="container"> -->
 					<h2>Nature</h2>
 					<p>The .img-circle class shapes the image to a circle (not
@@ -70,7 +70,7 @@
 						width="304" height="236">
 <!-- 				</div> -->
 			</div>
-			<div class="col-xs-12 col-sm-12 col-md-4">
+			<div class="col-xs-12 col-sm-12 col-md-6">
 				<!-- 				<div class="container"> -->
 					<h2>Seoul</h2>
 					<p>The .img-circle class shapes the image to a circle (not
@@ -90,92 +90,6 @@
 				<!-- 				</div> -->
 
 
-			</div>
-			<div class="col-xs-12 col-sm-12 col-md-4">
-				<h2>Recently wrote</h2>
-				<p>You can see your frinds :)</p>
-				<br>
-				<div class="media">
-					<div class="media-left">
-						<img src="/images/img_avatar1.png" class="media-object"
-							style="width: 45px">
-					</div>
-					<div class="media-body">
-						<h4 class="media-heading">
-							John Doe <small><i>Posted on February 19, 2016</i></small>
-						</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-							sed do eiusmod tempor incididunt ut labore et dolore magna
-							aliqua.</p>
-
-						<!-- Nested media object -->
-						<div class="media">
-							<div class="media-left">
-								<img src="/images/img_avatar2.png" class="media-object"
-									style="width: 45px">
-							</div>
-							<div class="media-body">
-								<h4 class="media-heading">
-									John Doe <small><i>Posted on February 20, 2016</i></small>
-								</h4>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-									sed do eiusmod tempor incididunt ut labore et dolore magna
-									aliqua.</p>
-
-								<!-- Nested media object -->
-								<div class="media">
-									<div class="media-left">
-										<img src="/images/img_avatar3.png" class="media-object"
-											style="width: 45px">
-									</div>
-									<div class="media-body">
-										<h4 class="media-heading">
-											John Doe <small><i>Posted on February 21, 2016</i></small>
-										</h4>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing
-											elit, sed do eiusmod tempor incididunt ut labore et dolore
-											magna aliqua.</p>
-									</div>
-								</div>
-
-							</div>
-
-							<!-- Nested media object -->
-							<div class="media">
-								<div class="media-left">
-									<img src="/images/img_avatar4.png" class="media-object"
-										style="width: 45px">
-								</div>
-								<div class="media-body">
-									<h4 class="media-heading">
-										Jane Doe <small><i>Posted on February 20, 2016</i></small>
-									</h4>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-										sed do eiusmod tempor incididunt ut labore et dolore magna
-										aliqua.</p>
-								</div>
-							</div>
-
-						</div>
-					</div>
-
-					<!-- Nested media object -->
-					<div class="media">
-						<div class="media-left">
-							<img src="/images/img_avatar5.png" class="media-object"
-								style="width: 45px">
-						</div>
-						<div class="media-body">
-							<h4 class="media-heading">
-								Jane Doe <small><i>Posted on February 19, 2016</i></small>
-							</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-								sed do eiusmod tempor incididunt ut labore et dolore magna
-								aliqua.</p>
-						</div>
-					</div>
-
-				</div>
 			</div>
 		</div>
 
