--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -11,7 +11,7 @@
 		<form action="/user/update" method="POST">
 			<div class="form-group">
 				<label for="password">Password</label> <input type="password"
-					class="form-control" name="password" placeholder="Password" value="{{password}}">
+					class="form-control" name="password" placeholder="Password">
 			</div>
 			<div class="form-group">
 				<label for="name">Name</label> <input type="text" class="form-control"
