--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 				{{#boardList}}
 					<div class="list-group">
 					  <a href="/board/list/{{id}}" class="list-group-item">
-					    <h4 class="list-group-item-heading">{{id}} &nbsp;&nbsp;{{title}}&nbsp;&nbsp;&nbsp;
+					    <h4 class="list-group-item-heading"  style="word-wrap: break-word;">{{id}} &nbsp;&nbsp;{{title}}&nbsp;&nbsp;&nbsp;
 						    {{#replyCounts}}
 						    <span class="glyphicon glyphicon-user"></span>
 						    <span class="badge">{{replyCounts}}</span>
@@ -34,7 +34,7 @@
 				{{#boardList2}}
 					<div class="list-group">
 					  <a href="/board/list/{{id}}" class="list-group-item">
-					    <h4 class="list-group-item-heading">{{id}} &nbsp;&nbsp;{{title}}&nbsp;&nbsp;&nbsp;
+					    <h4 class="list-group-item-heading" style="word-wrap: break-word;">{{id}} &nbsp;&nbsp;{{title}}&nbsp;&nbsp;&nbsp;
 						    {{#replyCounts}}
 						    <span class="glyphicon glyphicon-user"></span>
 						    <span class="badge">{{replyCounts}}</span>
