--- a/src/main/resources/templates/board/createForm.html
+++ b/src/main/resources/templates/board/createForm.html
@@ -16,7 +16,7 @@
   				<label for="contents">Contents</label> 
 		    	<textarea class="form-control" rows="3" name="contents" placeholder="contents"></textarea>
 			</div>
-			<button type="submit" class="btn btn-primary">Create</button>
+			<button type="submit" class="btn btn-primary btn-lg btn-block">Create</button>
 		</form>
 	</div>
 </body>
