--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -7,8 +7,8 @@
 	<div class="container">
 <!-- 		<h1>Board Detail</h1> -->
 				<blockquote>
-					<p>{{title}}</p>
-					<footer>
+					<p style="word-wrap: break-word;">{{title}}</p>
+					<footer style="word-wrap: break-word;">
 						{{{contents}}}</cite>
 					</footer>
 				</blockquote>
@@ -39,7 +39,7 @@
 								<h4 class="media-heading">
 									{{writer.name}} <small><i>Posted on {{FormattedCreateDate}}</i></small>
 								</h4>
-								<p>{{contents}}</p>
+								<p style="word-wrap: break-word;">{{contents}}</p>
 						</div>
 			{{/reply}}
 			</div>
