--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -17,6 +17,8 @@
 		<div class="collapse navbar-collapse"
 			id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav navbar-right">
+			<li><a href="/board/file/single_upload_form">(S)FileUploadTest</a></li>
+			<li><a href="/board/file/multi_upload_form">(M)FileUploadTest</a></li>
 			<li><a href="/board/list">Board</a></li>
 			{{^sessionUser}}
 				<li><a href="/user/login">Login</a></li>
