--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -15,11 +15,11 @@
 		<form action="/user/login" method="POST">
 			<div class="form-group">
 				<label for="userId">UserId</label> <input type="text"
-					class="form-control" name="userId" placeholder="UserId">
+					class="form-control" name="userId" placeholder="UserId" value="test1">
 			</div>
 			<div class="form-group">
 				<label for="password">Password</label> <input type="password"
-					class="form-control" name="password" placeholder="Password">
+					class="form-control" name="password" placeholder="Password" value="1">
 			</div>
 			<button type="submit" class="btn btn-primary btn-lg btn-block">Login</button>
 		</form>
