--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -54,6 +54,8 @@
         <script type="text/javascript" src="{{contextPath}}/js/security/rsa/rsa.js"></script>
         <script type="text/javascript" src="{{contextPath}}/js/security/rsa/prng4.js"></script>
         <script type="text/javascript" src="{{contextPath}}/js/security/rsa/rng.js"></script>
+        <script type="text/javascript" src="{{contextPath}}/js/security/rsa/base64.js"></script>        
+        
         <script type="text/javascript" src="{{contextPath}}/js/security/login.js"></script>
 
 </html>
