--- a/src/main/resources/templates/board/filelist.html
+++ b/src/main/resources/templates/board/filelist.html
@@ -6,7 +6,7 @@
 <SCRIPT LANGUAGE="JavaScript">
 <!--
 function goDownLink(id){
-	location.href="/ckeditor/file/download/"+id;
+	location.href="/ckeditor/file/private/download/"+id;
 }
 -->
 </SCRIPT>
@@ -14,7 +14,7 @@ function goDownLink(id){
 <body>
 	{{> /include/navigation }}
 	<div class="container">
-		<h1>FileList</h1>
+		<h1>PrivateFileList</h1>
 
 		<div class="table-responsive">
 			<table class="table table-hover">
@@ -23,6 +23,7 @@ function goDownLink(id){
 					<tr>
 						<th>Name</th>
 						<th>Size</th>
+						<th>Div</th>
 						<th>Date</th>
 					</tr>
 				</thead>
@@ -31,13 +32,14 @@ function goDownLink(id){
 					<tr onClick="javascript:goDownLink({{id}});" style="cursor: hand">
 						<td>{{origFileNm}}</td>
 						<td>{{fileSize}}</td>
+						<td>{{fileDiv}}</td>
 						<td>{{createDate}}</td>
 					</tr>
 					{{/userFileList}}
 				</tbody>
 			</table>
 		</div>
-		<form action="/ckeditor/file/single_upload" method="POST" enctype="multipart/form-data">
+		<form action="/ckeditor/file/private/upload" method="POST" enctype="multipart/form-data">
 			<div class="form-group">
 				<label for="file">File</label> 
 				<input type="file"	class="form-control" name="upload" placeholder="Select File">
