--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -20,6 +20,7 @@
 			<li><a href="/board/list">Board</a></li>
 			{{^sessionUser}}
 				<li><a href="/user/login">Login</a></li>
+				<li><a href="/user/login2">Login2</a></li>
 				<li><a href="/user/register">Register</a></li>
 			{{/sessionUser}}
  			{{#sessionUser}}
