--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -21,7 +21,10 @@
 			{{^sessionUser}}
 				<li><a href="/user/login">Login</a></li>
 				<li><a href="/user/login2">Login2</a></li>
+				<li><a href="/user/login3">Login3</a></li>
 				<li><a href="/user/register">Register</a></li>
+				<li><a href="/user/register2">Register2</a></li>
+				<li><a href="/user/register3">Register3</a></li>
 			{{/sessionUser}}
  			{{#sessionUser}}
 				<li><a href="/user/alert">Alert&nbsp;<span class="badge">42</span></a></li>
