--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -33,6 +33,7 @@
      			<li><a href="/ckeditor/file/userFileList"> FileBox</a></li>
 				<li><a href="/user/profile"><span class="badge">&nbsp;{{name}}</span></a></li>
 				<li><a href="/user/member">Members</a></li>
+				<li><a href="/swagger-ui.html">API</a></li>
 				<li><a href="/user/logout">Logout</a></li>
  			{{/sessionUser}}
 			</ul>
