--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -9,7 +9,7 @@
 	
 	
 	<div class="container">
-		<h1>Login</h1>
+		<h1>Login1</h1>
 	{{#loginFailCnt}}
 	<span class="label label-danger">Login Failed! Try Again!</span>&nbsp;&nbsp;
 	<span class="label label-danger">{{loginFailCnt}}</span>
@@ -30,8 +30,7 @@
             <input type="hidden" id="rsaPublicKeyExponent" value="{{pubKeyE}}" />
 			
 		</form>
-<!-- 		
-		<div>
+		<div> 
 		RSA INFO(RequestParam) <br>
 		{{pubKeyM}}<br>
 		{{pubKeyE}}<br>
@@ -46,7 +45,6 @@
 		{{publicKeyExponent}}<br>
 		{{/rsaInfo}}
 		</div>
-		 -->
 	</div>
 	<script src="/js/scripts.js"></script>
 </body>
