--- a/src/main/resources/templates/include/navigation.html
+++ b/src/main/resources/templates/include/navigation.html
@@ -30,6 +30,7 @@
 				<li><a href="/user/alert">Alert&nbsp;<span class="badge">42</span></a></li>
 				<!-- <li><a href="/board/file/multi_upload_form">(M)FileUploadTest</a></li> -->
 				<li><a href="/mail/send/61">TemplateMailSend</a></li>
+				<li><a href="/handlebar/hbtest1">HBTest</a></li>
      			<li><a href="/ckeditor/file/userFileList"> FileBox</a></li>
 				<li><a href="/user/profile"><span class="badge">&nbsp;{{name}}</span></a></li>
 				<li><a href="/user/member">Members</a></li>
